@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/tinderbox/Attic/tinderbox-chroot.sh,v 1.4 2004/07/12 14:25:16 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/tinderbox/Attic/tinderbox-chroot.sh,v 1.5 2004/07/12 15:01:17 zhen Exp $
 
 /usr/sbin/env-update
 source /etc/profile
@@ -41,9 +41,10 @@ rsync -avx --exclude "/root/" --exclude "/tmp/" --exclude "/usr/portage/" / /tmp
 
 for x in ${clst_tinderbox_packages}
 do
-	if [ -n "${clst_DEBUG}" ]
+	if [ -n "${clst_VERBOSE}" ]
 	then
 		emerge --usepkg --buildpkg -vp $x
+		sleep 5
 	fi
 	
 	emerge --usepkg --buildpkg $x
